--- a/DigitalHealthcare/.project
+++ b/DigitalHealthcare/.project
@@ -65,5 +65,10 @@
 			<type>2</type>
 			<location>E:/GitHub/ArcturusadminApi1.1/CommonCISValidation/src</location>
 		</link>
+		<link>
+			<name>EditSchedulePlan</name>
+			<type>2</type>
+			<location>E:/GitHub/ArcturusAdminApi1.2/EditSchedulePlan/src</location>
+		</link>
 	</linkedResources>
 </projectDescription>
