--- a/DigitalHealthcare/.classpath
+++ b/DigitalHealthcare/.classpath
@@ -6,6 +6,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="src" path="CreateSchedule"/>
 	<classpathentry kind="src" path="UpdateStaffDetails"/>
 	<classpathentry kind="src" path="GetStaffMemberDetails"/>
 	<classpathentry kind="src" path="SaveStaffmember"/>
