--- a/DigitalHealthcare/.project
+++ b/DigitalHealthcare/.project
@@ -66,6 +66,11 @@
 			<location>E:/GitHub/ArcturusadminApi1.1/CommonCISValidation/src</location>
 		</link>
 		<link>
+			<name>CreateSchedule</name>
+			<type>2</type>
+			<location>E:/GitHub/ArcturusAdminApi1.2/CreateSchedule/src</location>
+		</link>
+		<link>
 			<name>EditSchedulePlan</name>
 			<type>2</type>
 			<location>E:/GitHub/ArcturusAdminApi1.2/EditSchedulePlan/src</location>
