--- a/DigitalHealthcare/.project
+++ b/DigitalHealthcare/.project
@@ -71,6 +71,11 @@
 			<location>E:/GitHub/ArcturusAdminApi1.2/CreateSchedule/src</location>
 		</link>
 		<link>
+			<name>DeleteSchedulePlan</name>
+			<type>2</type>
+			<location>E:/GitHub/ArcturusAdminApi1.2/DeleteSchedulePlan/src</location>
+		</link>
+		<link>
 			<name>DeleteStaffMember</name>
 			<type>2</type>
 			<location>E:/GitHub/ArcturusAdminApi1.2/DeleteStaffMember/src</location>
