--- a/DigitalHealthcare/pom.xml
+++ b/DigitalHealthcare/pom.xml
@@ -150,6 +150,19 @@
     <artifactId>javax.ws.rs-api</artifactId>
     <version>2.0-m09</version>
 </dependency>
+
+  <!-- swagger -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.6.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.4.0</version>
+        </dependency>
     
   </dependencies>
   <build>
